assets/css/touranzza.css
/* ... */
.main-footer {
    position: relative;
    padding-top: 50px;
    background-color: #130f10;
    z-index: 1;
}

.main-footer__bottom {
    margin-top: 40px;
    padding-top: 15px;
    padding-bottom: 15px;
    background-color: #080607;
}

.main-footer__copyright {
    font-weight: 400;
    color: var(--trevlo-gray, #928496);
    margin-bottom: 0;
    font-size: 14px;
    text-transform: uppercase;
    letter-spacing: 1px;
}

.tour-listing-details__destination {
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: var(--trevlo-white2, #FAF5EE);
    margin-bottom: 40px;
}

.tour-listing-details__ratings-box {
    display: flex;
    align-items: center;
    margin-top: 15px;
}

p.tour-listing-details__overview-text.wow.animated.fadeInUp.animated {
    color: #000;
    font-weight: normal;
    font-size: 17px;
}

.tour-listing-details__faq .accrodion-content p {
    margin-bottom: 10px;
    color: #000;
    font-size: 16px;
    text-align: justify;
    font-weight: normal;
}

.tour-listing-details__faq .accrodion {
    position: relative;
    display: block;
    background-color: var(--trevlo-white2, #FAF5EE);
    border-radius: 10px;
    padding: 15px 30px;
    overflow: visible;
    transition: all ease 500ms;
    border: 1px solid var(--trevlo-white2, #FAF5EE);
}

.tour-listing-details__faq .accrodion-title h4 {
    padding-right: 30px;
    position: relative;
    font-size: 15px;
    font-weight: 600;
    color: var(--trevlo-primary, #2D2330);
    line-height: 1.4;
    margin-bottom: 0;
    -webkit-transition: all 500ms ease;
    transition: all 500ms ease;
}

.tour-listing-details__included-list-one li i {
    position: relative;
    top: 6px;
    font-size: 16px;
    color: #00c70f;
}

.tour-listing-details__included-list-two li i {
    position: relative;
    top: 5px;
    display: inline-block;
    border-radius: 50%;
    width: 18px;
    height: 18px;
    background-color: #ff0000;
    font-size: 10px;
    text-align: center;
    color: #fff;
    line-height: 18px;
}

.tour-listing-details-right {
    padding-bottom: 50px;
}

.tour-listing-details__included-list-one.tour-highlights li i {
    position: relative;
    top: 6px;
    font-size: 16px;
    color: #ffc202;
}

.tour-listing-details__title {
    font-size: var(--trevlo-size-7xl, 30px);
    text-transform: capitalize;
    line-height: 1.4;
    text-transform: uppercase;
    font-size: 22px;
}

.tour-listing-details__included {
    padding-bottom: 20px;
    border-bottom: 1px solid var(--trevlo-white3, #EBE6DE);
    margin-bottom: 30px;
}

.logo-slogan {
    float: right;
    margin-left: 20px;
    font-family: var(--trevlo-special-font, "Covered By Your Grace", cursive);
    font-size: 35px;
    color: #000;
    line-height: 40px;
    padding-top: 10px;
    margin-bottom: 0px;
}

.main-menu .main-menu__list>li+li {
    margin-left: 30px;
}

.iti.iti--allow-dropdown {
    width: 100%;
}

.tour-listing-details__sidebar-form-input input[type=text] {
    position: relative;
    border: none;
    outline: none;
    background-color: transparent;
    width: 100%;
    height: 56px;
    padding: 0 30px;
    border-radius: 0px;
    background-color: var(--trevlo-white2, #FAF5EE);
    /* border: 1px solid var(--trevlo-white3, #EBE6DE); */
}

form.tour-listing-details__sidebar-form label {
    font-size: 15px;
    text-transform: uppercase;
    font-weight: 600;
    color: #000;
    letter-spacing: 0.5px;
}

.form-one__input {
    border: none;
    outline: none;
    background-color: transparent;
    width: 100%;
    height: 60px;
    background-color: var(--trevlo-white2, #FAF5EE);
    padding: 20px 30px 20px 30px;
    border-radius: 0;
}

.tour-listing-details__sidebar-form-date-arrow {
    position: absolute;
    top: 70%;
    right: 30px;
    transform: translateY(-50%);
    font-size: 16px;
    color: var(--trevlo-secondary, #736D75);
    cursor: pointer;
}

.tour-listing-details__sidebar-form-input .bootstrap-select>.dropdown-toggle {
    position: relative;
    height: 56px;
    outline: none !important;
    border-radius: 0;
    border: none;
    background-color: var(--trevlo-white2, #FAF5EE) !important;
    margin: 0;
    padding: 0;
    padding-left: 30px;
    padding-right: 30px;
    color: var(--trevlo-secondary, #736D75) !important;
    font-family: var(--trevlo-font, "DM Sans", sans-serif);
    font-size: var(--trevlo-size-2xl, 16px);
    line-height: 56px;
    font-weight: 500;
    box-shadow: none !important;
    background-repeat: no-repeat;
    background-size: 14px 12px;
    background-position: right 25.75px center;
    border-radius: 0;
}

.tour-listing-details__sidebar-form-input .bootstrap-select .dropdown-menu>li>a {
    font-family: var(--trevlo-font, "DM Sans", sans-serif);
    font-size: var(--trevlo-size-xl, 14px);
    font-weight: 500;
    padding: 5px 30px;
    color: var(--trevlo-secondary, #736D75);
    background-color: var(--trevlo-white2, #FAF5EE);
    -webkit-transition: all 0.4s ease;
    transition: all 0.4s ease;
}

.contact-page {
    background-color: var(--trevlo-white, #ffffff);
    position: relative;
    padding-top: 50px;
}

/* Default styles for the slider image */
.main-slider-one__image {
    position: relative;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 550px;
    /* Default height */
    width: 100%;
    transform: scale(1);
    transition: transform 10000ms ease, -webkit-transform 10000ms ease;
    overflow: hidden;
    background-color: var(--trevlo-black, #000000);
}

/* Media query for landscape orientation on mobile devices */
@media only screen and (max-width: 767px) {
    .main-slider-one__image {
        height: 300px;
        /* Adjust the height as needed for landscape orientation on mobile devices */
        max-width: 100%;
        /* Set maximum width to 100% */
    }
}
/* ... */

